<?xml version="1.0" encoding="UTF-8" ?>
<!--

    (c) https://github.com/MontiCore/monticore

-->
<project xmlns="http://maven.apache.org/POM/4.0.0"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>montisim</groupId>
    <artifactId>hardware_emulator</artifactId>
    <version>2.1.3-SNAPSHOT</version>


    <properties>
        <simulation.version>3.3.6</simulation.version>


        <wagon.provider.version>2.6</wagon.provider.version>
        <!-- .. Plugins ....................................................... -->
        <compiler.plugin>3.3</compiler.plugin>
        <source.plugin>2.4</source.plugin>
        <!-- .. Misc .......................................................... -->
        <java.version>1.8</java.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
    </properties>


    <dependencies>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.12</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>montisim</groupId>
            <artifactId>sim-commons</artifactId>
            <version>${simulation.version}</version>
        </dependency>
        <dependency>
            <groupId>montisim</groupId>
            <artifactId>eesimulator</artifactId>
            <version>${simulation.version}</version>
        </dependency>
        <dependency>
            <groupId>montisim</groupId>
            <artifactId>simulator</artifactId>
            <version>${simulation.version}</version>
        </dependency>
        <dependency>
            <groupId>montisim</groupId>
            <artifactId>vehicle</artifactId>
            <version>${simulation.version}</version>
        </dependency>
        <dependency>
            <groupId>montisim</groupId>
            <artifactId>environment</artifactId>
            <version>${simulation.version}</version>
        </dependency>


        <!-- <dependency>
            <groupId>org.apache.sshd</groupId>
            <artifactId>sshd-core</artifactId>
            <version>2.5.1</version>
        </dependency> -->
    </dependencies>

    <!-- == PROJECT BUILD SETTINGS =========================================== -->

    <build>
        <plugins>

            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>templating-maven-plugin</artifactId>
                <version>1.0.0</version>
                <executions>
                    <execution>
                        <id>filter-src</id>
                        <goals>
                            <goal>filter-sources</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <!-- Add the option to generate the JNI headers directly to the CPP project -->
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${compiler.plugin}</version>
                <configuration>
                    <compilerArgs>
                        <arg>-h</arg>
                        <arg>hardware_emulator/src/lib</arg>
                    </compilerArgs>
                    <useIncrementalCompilation>true</useIncrementalCompilation>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                </configuration>
            </plugin>

            <!-- Run the tests where the test/resources are located -->
            <plugin>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.0.0-M5</version>
                <configuration>
                    <workingDirectory>${project.basedir}/target/test-classes</workingDirectory>
                    <forkCount>1</forkCount>
                    <reuseForks>true</reuseForks>
                    <argLine>-Xmx2048m -XX:MaxPermSize=1024m</argLine>
                </configuration>
            </plugin>

            <!-- Source Jar Configuration -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>${source.plugin}</version>
                <executions>
                    <execution>
                        <id>create source jar</id>
                        <phase>package</phase>
                        <goals>
                            <goal>jar-no-fork</goal>
                        </goals>
                        <configuration>
                            <excludeResources>false</excludeResources>
                            <includes>
                                <include>**/*.java</include>
                                <include>**/*.ftl</include>
                            </includes>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <!-- to add copyright information automatically-->
            <plugin>
                <groupId>com.mycila</groupId>
                <artifactId>license-maven-plugin</artifactId>
                <version>3.0</version>
                <configuration>
                    <header>${project.baseUri}/src/license/se/license.txt</header>
                    <excludes>
                        <exclude>**/README</exclude>
                        <exclude>src/test/resources/**</exclude>
                        <exclude>src/main/resources/**</exclude>
                        <exclude>src/license/**</exclude>
                        <exclude>extern/**</exclude>
                        <exclude>**/build/**</exclude>
                        <exclude>**/Debug/**</exclude>
                        <exclude>**/Release/**</exclude>
                        <exclude>**/CMakeLists.txt</exclude>
                        <exclude>**.txt</exclude>
                    </excludes>
                </configuration>
                <executions>
                    <execution>
                        <goals>
                            <goal>format</goal>
                        </goals>
                        <phase>process-sources</phase>
                    </execution>
                </executions>
            </plugin>


            <plugin>
                <artifactId>maven-deploy-plugin</artifactId>
                <version>2.8.1</version>
            </plugin>
            <plugin>
                <groupId>org.eluder.coveralls</groupId>
                <artifactId>coveralls-maven-plugin</artifactId>
                <version>4.3.0</version>
                <configuration></configuration>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>cobertura-maven-plugin</artifactId>
                <version>2.7</version>
                <configuration>
                    <format>xml</format>
                    <maxmem>256m</maxmem>
                    <!-- aggregated reports for multi-module projects -->
                    <aggregate>true</aggregate>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <!-- == DISTRIBUTION ==================================================== -->

    <distributionManagement>
        <repository>
            <id>se-nexus</id>
            <url>https://nexus.se.rwth-aachen.de/content/repositories/embeddedmontiarc-releases/</url>
        </repository>
        <snapshotRepository>
            <id>se-nexus</id>
            <url>https://nexus.se.rwth-aachen.de/content/repositories/embeddedmontiarc-snapshots/</url>
        </snapshotRepository>
    </distributionManagement>

</project>
